# mini-projects-python

./: LICENSE  README.md
02-calc-cli/: README.md  pyproject.toml
02-calc-cli/src/calc/: repl.py
02_calc_cli/: README.md  flake.nix  pyproject.toml  requirements.txt
02_calc_cli/src/calc/: cli.py  output.py
03-todos-cli/: main.py  pyproject.toml
04-contact-book/: README.md  pyproject.toml  requirements.txt
04-contact-book/src/contacts/: cli.py  core.py  models.py  storage.py  utils.py
