[project]
name = "contact-book"
version = "0.1.0"
description = "Manage your contacts - add, search & delete."
authors = [{ name = "Shubham V" }]
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.12"

[project.scripts]
contacts = "contacts.cli:main"

[tool.setuptools.packages.find]
where = ["src"]
